# Fashioning.ai

./: .gitignore  GCP_DEPLOYMENT_GUIDE.md  README.md  deploy-backend.sh  deploy-frontend.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/v1/: ai.py  data_enrichment.py  news.py  trends.py  users.py
backend/app/core/: config.py
backend/app/models/: trend.py
backend/app/services/: advanced_ai_service.py  algolia_service.py  fashion_scraper_service.py  gemini_service.py  mock_data.py
backend/scripts/: fashion_scraper.py
frontend/: README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIChat.tsx  ComprehensiveAnalysis.tsx  DataEnrichment.tsx  QuickStats.tsx  SearchFilters.tsx  TrendCard.tsx  TrendsGrid.tsx
frontend/src/services/: api.ts
frontend/src/types/: fashion.ts
